--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,75 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+ 
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+body{
+  background-color: white;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: gray;
+  border-radius: 10px;
+}
+.App{
+  /* max-width: 1230px; */
+  max-width: auto;
+  min-height: 100vh;
+  margin: 0 auto;
+  box-shadow: 0 0 35px #eee;
+  background-color: #d8e3e7;
+  border: 1px solid black;
+}
+
+a{
+  text-decoration: none;
+  /* color: white; */
+}
+ul li{
+  list-style: none;
+ 
+}
+
+button{
+  border: none;
+  outline: none;
+  background: transparent;
+  cursor: pointer;
+}
+
+.load_more{
+  text-align: center
+}
+.load_more button{
+  padding: .25rem .75rem;
+  margin-bottom: 20px;
+  border: 1px solid;
+  border-radius: 50px
+}
+
+
+
+
+@import url('./components/mainpage/product/product.css');
+@import url('./components/mainpage/utils/productdetail/productDetail.css');
+@import 'react-toastify/dist/ReactToastify.css';
