--- a/src/components/mainpage/product/filter.css
+++ b/src/components/mainpage/product/filter.css
@@ -32,8 +32,9 @@
   .filter_menu .row span{
     display: none;
   }
+ 
   .filter_menu input{
-    margin-right: 0;
+    margin: 4px 4px;
   }
   .filter_menu .sort {
     flex: 1;
@@ -44,6 +45,16 @@
     margin: 5px auto;
   }
   #category{
-    margin: 0;
+    margin:0px ;
   }
+}
+
+@media screen and (max-width: 315px) {
+  .filter_menu {
+    justify-content: center;
+    align-items: center;
+  }
+   #category {
+     margin-bottom: 5px;
+   }
 }
